# internal_trainings

./: .gitmodules  CMakeLists.txt  README.md
common/: CMakeLists.txt  utils.cpp
